﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.12.0.14) stable; urgency=low

  * osparser: evaluateBoolean: sendlog: switch log append mode on
      in order to avoid that a final log removes this one
  * new function : getSubListByMatch(<search string>, <target list>) :stringlist
  * new function : getSubListByMatch(<search list>, <target list>) :stringlist
  * new function : getSubListByContaining(<search string>, <target list>) :stringlist
  * new function : getSubListByContaining(<search list>, <target list>) :stringlist
  * new function : getSubListByKey(<search string>, <target list>) :stringlist
  * new function : getSubListByKey(<search list>, <target list>) :stringlist
  * new function : getKeyList(<list>) :stringlist

-- Detlef Oertel <d.oertel@uib.de>  Tue, 13 Feb 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.13) stable; urgency=low

  * osparser: for-to loop: fix failure at for x to x loop
  * oslog: includelogtail: now log includelog at log level 7
  * new function getIndexFromListByContaining(<list> : stringlist,<search string> : string) : <number> : string
  * temporary set debug_lib always to true
  * osparser / osdefinedfunctions: call from a local function an other local function
      using a local variable as call by value parameter
  * osparser: more fixes for nestinglevel (if then else through localfunctions and sub)
  * new booealn function: runningInPE (osparser,osfunc,osfuncwin) (at linux always false)
  * osdefinedfunctions: fixes on parsing paramtype
  * osparser: Ifelseendiflevel : longint = 0; // global nestlevel store
     used to pass nestlevel to evaluatestring and producestringlist  --> local functions
  * osdefinedfunctions: fix in isVisibleLocalVar
  * osjson: jsonAsArrayToStringList: allow strings as valid array components